--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_system
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_spring_system
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.use-new-id-generator-mappings= false
+
 
 
 spring.security.user.name=user
