--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 
 
