Adding email service. Changing request bodies for login and registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.security.user.roles=user
 spring.jpa.show-sql=true
 server.port=8083
 
-
-
 server.error.whitelabel.enabled=false
+
+#Custom added properties
+
+email.service.user.from.email=bohdan.loiko@gmail.com
+email.service.user.from.password=TODO
