--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.generate_statistics=true
 #logging.level.org.hibernate.type=trace
 #logging.level.org.hibernate.stat=debug
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 
