add registration email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ server.error.whitelabel.enabled=false
 
 #Custom added properties
 
-email.service.user.from.email=bohdan.loiko@gmail.com
-email.service.user.from.password=TODO
+email.service.user.from.email=6218812@stud.nau.edu.ua
+email.service.user.from.password=hsuhtedjorkltgsf
