--- a/restaurant-ui/pom.xml
+++ b/restaurant-ui/pom.xml
@@ -145,6 +145,10 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
