--- a/restaurant-ui/src/test/resources/application-test.properties
+++ b/restaurant-ui/src/test/resources/application-test.properties
@@ -11,7 +11,7 @@ server.port=9001
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#If want to see very extensive logging
+#If you want to see very extensive logging
 spring.jpa.properties.hibernate.generate_statistics=true
 #logging.level.org.hibernate.type=trace
 #logging.level.org.hibernate.stat=debug
